--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.44",
+    "@napi-rs/canvas-win32-x64-msvc": "^0.1.88",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "@react-three/postprocessing": "^3.0.4",
     "lucide-react": "^0.562.0",
     "next": "16.0.10",
+    "ogl": "^1.0.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "sharp": "^0.34.5",
