--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@napi-rs/canvas": "^0.1.44",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "@react-three/postprocessing": "^3.0.4",
@@ -21,6 +20,9 @@
     "sharp": "^0.34.5",
     "three": "^0.182.0",
     "zustand": "^5.0.9"
+  },
+  "optionalDependencies": {
+    "@napi-rs/canvas": "^0.1.44"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
